feat: use latest cockpit connector